// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Yonoma's sendEvent destination action: all fields 1`] = `
Object {
  "event": "CIoJPe",
  "listId": "CIoJPe",
  "properties": Object {
    "testType": "CIoJPe",
  },
  "timestamp": "2063-02-13T04:28:33.062Z",
  "userId": "CIoJPe",
}
`;

exports[`Testing snapshot for Yonoma's sendEvent destination action: required fields 1`] = `
Object {
  "event": "CIoJPe",
  "listId": "CIoJPe",
  "userId": "testuserid",
}
`;
